[gd_scene load_steps=20 format=1]

[ext_resource path="res://scripts/Scene1.gd" type="Script" id=1]
[ext_resource path="res://image/psychoparty_bg.png" type="Texture" id=2]
[ext_resource path="res://image/mouse.png" type="Texture" id=3]
[ext_resource path="res://image/joystick.png" type="Texture" id=4]
[ext_resource path="res://image/p1.png" type="Texture" id=5]
[ext_resource path="res://image/p2.png" type="Texture" id=6]
[ext_resource path="res://image/p3.png" type="Texture" id=7]
[ext_resource path="res://image/p4.png" type="Texture" id=8]
[ext_resource path="res://image/player1.png" type="Texture" id=9]
[ext_resource path="res://image/player2.png" type="Texture" id=10]
[ext_resource path="res://image/start.png" type="Texture" id=11]
[ext_resource path="res://image/start_hover.png" type="Texture" id=12]

[sub_resource type="Animation" id=1]

resource/name = "flash"
length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1, 2 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ 1.0, 0.0, 1.0 ] }

[sub_resource type="Animation" id=2]

resource/name = "slide"
length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( -520, 115 ), Vector2( 0, 115 ) ] }

[sub_resource type="Animation" id=3]

resource/name = "stop"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ 1.0 ] }

[sub_resource type="Animation" id=4]

length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1, 2 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ 1.0, 0.0, 1.0 ] }

[sub_resource type="Animation" id=5]

length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("..:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 1302, 112 ), Vector2( 782, 112 ) ] }

[sub_resource type="Animation" id=6]

resource/name = "stop"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ 1.0 ] }

[sub_resource type="Animation" id=7]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Button1:rect/pos")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( -520, 115 ), Vector2( 0, 115 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("Button2:rect/pos")
tracks/1/interp = 2
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 1302, 112 ), Vector2( 782, 112 ) ] }

[node name="Node" type="Node2D"]

script/script = ExtResource( 1 )

[node name="psychoparty_bg" type="Sprite" parent="."]

transform/pos = Vector2( 641.748, 361.068 )
transform/scale = Vector2( 3.6, 3.6 )
texture = ExtResource( 2 )

[node name="mouse1" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( 216.615, 513.563 )
transform/rot = 50.0
transform/scale = Vector2( 3.6, 3.6 )
texture = ExtResource( 3 )

[node name="mouse2" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( 1043.65, 513.563 )
transform/rot = 50.0
transform/scale = Vector2( 3.6, 3.6 )
texture = ExtResource( 3 )

[node name="joystick1" type="Sprite" parent="."]

editor/display_folded = true
visibility/visible = false
transform/pos = Vector2( 222.875, 547.869 )
transform/scale = Vector2( 3.6, 3.6 )
texture = ExtResource( 4 )

[node name="p1" type="Sprite" parent="joystick1"]

visibility/visible = false
transform/pos = Vector2( 29.0327, 10.7153 )
transform/scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="p2" type="Sprite" parent="joystick1"]

visibility/visible = false
transform/pos = Vector2( 29.0327, 10.7153 )
transform/scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="p3" type="Sprite" parent="joystick1"]

visibility/visible = false
transform/pos = Vector2( 29.0327, 10.7153 )
transform/scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="p4" type="Sprite" parent="joystick1"]

visibility/visible = false
transform/pos = Vector2( 29.0327, 10.7153 )
transform/scale = Vector2( 2, 2 )
texture = ExtResource( 8 )

[node name="joystick2" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( 1049.91, 547.869 )
transform/scale = Vector2( 3.6, 3.6 )
texture = ExtResource( 4 )

[node name="p1" type="Sprite" parent="joystick2"]

visibility/visible = false
transform/pos = Vector2( 29.0327, 10.7153 )
transform/scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="p2" type="Sprite" parent="joystick2"]

visibility/visible = false
transform/pos = Vector2( 29.0327, 10.7153 )
transform/scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="p3" type="Sprite" parent="joystick2"]

visibility/visible = false
transform/pos = Vector2( 29.0327, 10.7153 )
transform/scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="p4" type="Sprite" parent="joystick2"]

visibility/visible = false
transform/pos = Vector2( 29.0327, 10.7153 )
transform/scale = Vector2( 2, 2 )
texture = ExtResource( 8 )

[node name="Button1" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 115.0
margin/right = 513.0
margin/bottom = 447.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="Button1"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/flash = SubResource( 1 )
anims/slide = SubResource( 2 )
anims/stop = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="player1" type="Sprite" parent="Button1"]

visibility/opacity = 0.989987
transform/pos = Vector2( 257, 165 )
transform/scale = Vector2( 3.6, 3.6 )
texture = ExtResource( 9 )

[node name="Button2" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 782.0
margin/top = 112.0
margin/right = 1283.0
margin/bottom = 444.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="Button2"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/flash = SubResource( 4 )
anims/slide = SubResource( 5 )
anims/stop = SubResource( 6 )
playback/active = true
playback/speed = 1.5
blend_times = [  ]
autoplay = ""

[node name="player2" type="Sprite" parent="Button2"]

transform/pos = Vector2( 247.27, 169.998 )
transform/scale = Vector2( 3.6, 3.6 )
texture = ExtResource( 10 )

[node name="Button_Send" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 434.0
margin/top = 526.0
margin/right = 554.0
margin/bottom = 567.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 11 )
textures/pressed = ExtResource( 12 )
params/scale = Vector2( 3, 3 )

[node name="Slide" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/slide = SubResource( 7 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""


